--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,46 @@
                 <a-asset-item id="nav_mesh" response-type="arraybuffer" src="assets/models/GLTF/NavMeshTP.gltf"></a-asset-item>
 
 
+                <!--PLANT MODELS-->
+                <!--
+                <a-asset-item id= "plant01_01" response-type = "arraybuffer" src="assets/models/plants/plant01/plant01_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant01_02" response-type = "arraybuffer" src="assets/models/plants/plant01/plant01_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant01_03" response-type = "arraybuffer" src="assets/models/plants/plant01/plant01_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant01_04" response-type = "arraybuffer" src="assets/models/plants/plant01/plant01_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant01_05" response-type = "arraybuffer" src="assets/models/plants/plant01/plant01_05.gltf"></a-asset-item>
+
+                <a-asset-item id= "plant02_01" response-type = "arraybuffer" src="assets/models/plants/plant 02/plant02_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant02_02" response-type = "arraybuffer" src="assets/models/plants/plant 02/plant02_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant02_03" response-type = "arraybuffer" src="assets/models/plants/plant 02/plant02_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant02_04" response-type = "arraybuffer" src="assets/models/plants/plant 02/plant02_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant02_05" response-type = "arraybuffer" src="assets/models/plants/plant 02/plant02_05.gltf"></a-asset-item>
+
+                <a-asset-item id= "plant03_01" response-type = "arraybuffer" src="assets/models/plants/plant 03/plant03_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant03_02" response-type = "arraybuffer" src="assets/models/plants/plant 03/plant03_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant03_03" response-type = "arraybuffer" src="assets/models/plants/plant 03/plant03_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant03_04" response-type = "arraybuffer" src="assets/models/plants/plant 03/plant03_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant03_05" response-type = "arraybuffer" src="assets/models/plants/plant 03/plant03_05.gltf"></a-asset-item>
+
+                <a-asset-item id= "plant04_01" response-type = "arraybuffer" src="assets/models/plants/plant 04/plant04_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant04_02" response-type = "arraybuffer" src="assets/models/plants/plant 04/plant04_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant04_03" response-type = "arraybuffer" src="assets/models/plants/plant 04/plant04_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant04_04" response-type = "arraybuffer" src="assets/models/plants/plant 04/plant04_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant04_05" response-type = "arraybuffer" src="assets/models/plants/plant 04/plant04_05.gltf"></a-asset-item>
+
+                <a-asset-item id= "plant05_01" response-type = "arraybuffer" src="assets/models/plants/plant 05/plant05_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant05_02" response-type = "arraybuffer" src="assets/models/plants/plant 05/plant05_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant05_03" response-type = "arraybuffer" src="assets/models/plants/plant 05/plant05_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant05_04" response-type = "arraybuffer" src="assets/models/plants/plant 05/plant05_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant05_05" response-type = "arraybuffer" src="assets/models/plants/plant 05/plant05_05.gltf"></a-asset-item>
+
+                <a-asset-item id= "plant06_01" response-type = "arraybuffer" src="assets/models/plants/plant 06/plant06_01.gltf"></a-asset-item>
+                <a-asset-item id= "plant06_02" response-type = "arraybuffer" src="assets/models/plants/plant 06/plant06_02.gltf"></a-asset-item>
+                <a-asset-item id= "plant06_03" response-type = "arraybuffer" src="assets/models/plants/plant 06/plant06_03.gltf"></a-asset-item>
+                <a-asset-item id= "plant06_04" response-type = "arraybuffer" src="assets/models/plants/plant 06/plant06_04.gltf"></a-asset-item>
+                <a-asset-item id= "plant06_05" response-type = "arraybuffer" src="assets/models/plants/plant 06/plant06_05.gltf"></a-asset-item>
+                -->
+
+
                 <!--INTERIOR-->
                 <!--DOORS-->
                 <a-asset-item id = "balconyDoor01" response-type = "arraybuffer" src = "assets/models/APARTMENT/balconyDoor01.gltf"></a-asset-item>
@@ -279,6 +319,43 @@
                 static-body></a-entity>
 
                 <a-entity id="apartment_build" position="0 10 0" scale="0.2 0.2 0.2" gltf-model="#apartment_model" shadow static-body></a-entity>
+                
+                <!--Testing plants
+                <a-entity id="plant01-01" class = 'new-plants' position = '5, 11, 12' scale = "90 90 90" gltf-model = "#plant01_01"></a-entity>
+                <a-entity id="plant01-02" class = 'new-plants' position = '5, 11, 12' scale = "90 90 90"  gltf-model = "#plant01_02" visible = "false"></a-entity>
+                <a-entity id="plant01-03" class = 'new-plants' position = '5, 11, 12' scale = "90 90 90" gltf-model = "#plant01_03"  visible = "false"></a-entity>
+                <a-entity id="plant01-04" class = 'new-plants' position = '5, 11, 12' scale = "90 90 90" gltf-model = "#plant01_04"  visible = "false"></a-entity>
+                <a-entity id="plant01-05" class = 'new-plants' position = '5, 11, 12' scale = "90 90 90" gltf-model = "#plant01_05"  visible = "false"></a-entity>
+
+                <a-entity id="plant02-01" class = 'new-plants' position = '7, 11, 12' scale = "90 90 90" gltf-model = "#plant02_01"></a-entity>
+                <a-entity id="plant02-02" class = 'new-plants' position = '7, 11, 12' scale = "90 90 90" gltf-model = "#plant02_02" visible = "false"></a-entity>
+                <a-entity id="plant02-03" class = 'new-plants' position = '7, 11, 12' scale = "90 90 90" gltf-model = "#plant02_03" visible = "false"></a-entity>
+                <a-entity id="plant02-04" class = 'new-plants' position = '7, 11, 12' scale = "90 90 90" gltf-model = "#plant02_04" visible = "false"></a-entity>
+                <a-entity id="plant02-05" class = 'new-plants' position = '7, 11, 12' scale = "90 90 90" gltf-model = "#plant02_05" visible = "false"></a-entity>
+
+                <a-entity id="plant03-01" class = 'new-plants' position = '9, 11, 12' scale = "90 90 90" gltf-model = "#plant03_01"></a-entity>
+                <a-entity id="plant03-02" class = 'new-plants' position = '9, 11, 12' scale = "90 90 90" gltf-model = "#plant03_02"  visible = "false"></a-entity>
+                <a-entity id="plant03-03" class = 'new-plants' position = '9, 11, 12' scale = "90 90 90" gltf-model = "#plant03_03"  visible = "false"></a-entity>
+                <a-entity id="plant03-04" class = 'new-plants' position = '9, 11, 12' scale = "90 90 90" gltf-model = "#plant03_04"  visible = "false"></a-entity>
+                <a-entity id="plant03-05" class = 'new-plants' position = '9, 11, 12' scale = "90 90 90" gltf-model = "#plant03_05"  visible = "false"></a-entity>
+
+                <a-entity id="plant04-01" class = 'new-plants' position = '11, 11, 12' scale = "90 90 90" gltf-model = "#plant04_01"></a-entity>
+                <a-entity id="plant04-02" class = 'new-plants' position = '11, 11, 12' scale = "90 90 90" gltf-model = "#plant04_02"  visible = "false"></a-entity>
+                <a-entity id="plant04-03" class = 'new-plants' position = '11, 11, 12' scale = "90 90 90" gltf-model = "#plant04_03"  visible = "false"></a-entity>
+                <a-entity id="plant04-04" class = 'new-plants' position = '11, 11, 12' scale = "90 90 90" gltf-model = "#plant04_04"  visible = "false"></a-entity>
+                <a-entity id="plant04-05" class = 'new-plants' position = '11, 11, 12' scale = "90 90 90" gltf-model = "#plant04_05"  visible = "false"></a-entity>
+
+                <a-entity id="plant05-01" class = 'new-plants' position = '3, 11, 12' scale = "90 90 90" gltf-model = "#plant05_01"></a-entity>
+                <a-entity id="plant05-02" class = 'new-plants' position = '3, 11, 12' scale = "90 90 90" gltf-model = "#plant05_02" visible = "false"></a-entity>
+                <a-entity id="plant05-03" class = 'new-plants' position = '3, 11, 12' scale = "90 90 90" gltf-model = "#plant05_03" visible = "false"></a-entity>
+                <a-entity id="plant05-04" class = 'new-plants' position = '3, 11, 12' scale = "90 90 90" gltf-model = "#plant05_04" visible = "false"></a-entity>
+                <a-entity id="plant05-05" class = 'new-plants' position = '3, 11, 12' scale = "90 90 90" gltf-model = "#plant05_05" visible = "false"></a-entity>
+
+                <a-entity id="plant06-01" class = 'new-plants' position = '1, 11, 12' scale = "90 90 90" gltf-model = "#plant06_01"></a-entity>
+                <a-entity id="plant06-02" class = 'new-plants' position = '1, 11, 12' scale = "90 90 90" gltf-model = "#plant06_02" visible = "false"></a-entity>
+                <a-entity id="plant06-03" class = 'new-plants' position = '1, 11, 12' scale = "90 90 90" gltf-model = "#plant06_03" visible = "false"></a-entity>
+                <a-entity id="plant06-04" class = 'new-plants' position = '1, 11, 12' scale = "90 90 90" gltf-model = "#plant06_04" visible = "false"></a-entity>
+                <a-entity id="plant06-05" class = 'new-plants' position = '1, 11, 12' scale = "90 90 90" gltf-model = "#plant06_05" visible = "false"></a-entity> -->
                 
                 <!--Environmental effect testing button-->
                 <a-entity id="environment_button" position = "5 10.2 10">
