--- a/public/index.html
+++ b/public/index.html
@@ -412,6 +412,24 @@
             <a-entity id="river" position="-10 5 30" rotation="0 0 0" scale="11 11 11" gltf-model="#river_straight" shadow static-body></a-entity>
             <a-entity id="river" position="-10 5 20" rotation="0 0 0" scale="11 11 11" gltf-model="#river_straight" shadow static-body></a-entity>
 
+
+                <!-- lights for river --> 
+
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="9 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="19 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="29 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="39 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-2 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-11 6 62"></a-entity>
+ 
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-21 6 62"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-21 6 51"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-10 6 51"></a-entity>
+ 
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-10 6 40"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-10 6 30"></a-entity>
+             <a-entity id="l1" light="type: point; color: #2596be; distance: 20.0; intensity: 2.0" position="-10 6 20"></a-entity>
+
             <!-- roads -->
             <a-entity id="straight" position="-60 11 0" rotation="0 90 0" scale="11 11 11" gltf-model="#straight_street" shadow static-body></a-entity>
             <a-entity id="straight" position="-60 11 10" rotation="0 90 0" scale="11 11 11" gltf-model="#straight_street" shadow static-body></a-entity>
