--- a/public/index.html
+++ b/public/index.html
@@ -768,24 +768,21 @@
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
             <a-entity class="top-plants" position="-60, 21.5, 40" geometry="primitive: box" scale="5, 2, 5"
-                rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
-
-            <a-entity class="top-plants" position="28, 7.5, 65" geometry="primitive: box" scale="2, 2, 2"
-                rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
+                rotation="0, 0, 0" material="color: yellow;" visible="false"></a-entity>
 
             <a-entity class="top-plants" position="-60, 21.5, 40" geometry="primitive: box" scale="5, 2, 5"
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
-            <a-entity class="top-plants" position="-10, 21.5, 40" geometry="primitive: box" scale="5, 2, 5"
+            <a-entity class="top-plants" position="-20, 21.5, 40" geometry="primitive: box" scale="5, 2, 5"
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
-            <a-entity class="top-plants" position="-10, 18.5, 58" geometry="primitive: box" scale="3, 2, 3"
+            <a-entity class="top-plants" position="-20, 18.5, 30" geometry="primitive: box" scale="3, 2, 3"
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
-            <a-entity class="top-plants" position="9, 7.5, 53" geometry="primitive: box" scale="2, 2, 2"
+            <a-entity class="top-plants" position="30, 21.5, 50" geometry="primitive: box" scale="4.5, 2, 4.5"
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
-            <a-entity class="top-plants" position="10.5, 16, 40.5" geometry="primitive: box" scale="4, 2, 3"
+            <a-entity class="top-plants" position="17.5, 16, 45.5" geometry="primitive: box" scale="4, 2, 3"
                 rotation="0, 0, 0" material="color: green;" visible="false"></a-entity>
 
             <!--Where instantiated trees appear-->
