--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,9 @@
             <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
             <a-entity cursor="rayOrigin:mouse;" raycaster="far:40; interval:200; objects:.interactive;"></a-entity>
 
+            <!--text element for UI-->
+            <a-entity  id = "puzzle-text" position = "1.2 0.7 -1" text = "value: Puzzles: 0/5; width:2; font:https://cdn.aframe.io/fonts/Aileron-Semibold.fnt;"></a-entity>
+
             <a-entity id="good-sound-fx" sound="src:#good2_sfx; autoplay:false;"></a-entity>
             <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
             <a-entity id="scene_music" class="ambient-music"
