credits in  progress

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
     <!-- https://developers.google.com/web/updates/2017/09/autoplay-policy-changes (fun memes on webpage;) -->
     <div id="user-gesture-overlay">
         <div class="center">
+            <div id = "welcome-text" class = 'fade-in'> Welcome to Missing Piece </div>
+            <div id = "welcome-text-2"> <br></div>
+            <div id = "welcome-text-3"> <br></div>
+            <div id = "welcome-text-4"><br> </div>
+            <br>
             <button id="user-gesture-button" onclick="startExperience()">Enter Experience</button>
             <!-- loading gif from: https://www.behance.net/gallery/31234507/Open-source-Loading-GIF-Icons-Vol-1 -->
             <img id="loading-animation"
